# Basic-Triangle-Rendering

./: CMakeLists.txt
include/glad/: glad.h
resources/shaders/: default.frag  default.vert
src/: EBO.cpp  VAO.cpp  VAO.h  glad.c  main.cpp  shaderClass.cpp  shaderClass.h  test.cpp  texture.cpp  texture.h
